--- a/.htaccess
+++ b/.htaccess
@@ -25,6 +25,8 @@ ErrorDocument 404 /404.php
   RewriteCond %{REQUEST_FILENAME} !/bitrix/urlrewrite.php$
   RewriteRule ^(.*)$ /bitrix/urlrewrite.php [L]
   RewriteRule .* - [E=REMOTE_USER:%{HTTP:Authorization}]
+
+  Redirect 301 /personal/cart/ /cart/order/
 </IfModule>
 
 <IfModule mod_dir.c>
